--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,17 @@
   margin: 0;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  /* display: none; <- Crashes Chrome on hover */
+  -webkit-appearance: none;
+  margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
+
+input[type="number"] {
+  -moz-appearance: textfield; /* Firefox */
+}
+
 @font-face {
   font-family: "Hensa";
   src: url("../public/Hensa.otf");
