--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,3 +36,8 @@ input[type="number"] {
     transform: translateX(-50%) translateZ(0) scaleY(1);
   }
 }
+
+.collection-card:hover .collection-card-image,
+.collection-card:focus .collection-card-image {
+  transform: scale(1.2);
+}
